# MediaVault

./: .gitignore  Cargo.toml  tauri.conf.json
.claude/: settings.json
.github/workflows/: ci.yml
src/: desktop.rs  error.rs  lib.rs  main.rs
src/ai/: mod.rs
src/api/: anilist.rs  audible.rs  audiobookshelf.rs  goodreads.rs  mod.rs
src/api/novel/: generic.rs  mod.rs  novelfull.rs  novelight.rs  novelphoenix.rs  novelupdates.rs  royalroad.rs  wordpress.rs
src/app/: mod.rs
src/core/: audit.rs  duplicate.rs  epub.rs  import.rs  mod.rs  playlist.rs  progress.rs  properties.rs  vault.rs  webnovel.rs
src/core/covers/: mod.rs
src/core/workflows/: mod.rs
src/media/: mod.rs
