[package]
name = "mediavault"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[build-dependencies]
tauri-build = "2"

[dependencies]
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
urlencoding = "2"
