[package]
name = "mediavault"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[build-dependencies]
tauri-build = "2"

[dependencies]
# Tree node types used when walking scraper's DOM (same crate scraper uses).
ego-tree = "0.6"
# Gunzip for HTML relayed (gzip+base64) from the embedded browser window.
flate2 = "1"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# HTML parsing for the webnovel source adapters (ToC + chapter extraction).
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
urlencoding = "2"
# EPUB files are zip containers; the OPF/XHTML templates are written by hand.
zip = { version = "2", default-features = false, features = ["deflate"] }
